frontend received data from backend by websocket

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,12 +11,12 @@
 
     <title>Hello, world!</title>
   </head>
-  <body onload="draw();">
+  <body>
     <div class="container">
       <h1>Hello, world!</h1>
       <p class="my-red">Lorem ipsum sdfsd</p>
       <br>
-      <canvas id="tutorial" width="300" height="300"></canvas>
+      <canvas id="canvas" width="300" height="300"></canvas>
     </div>
     
 
