add displayong violation messages, anchors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello, world!</h1>
-      <p class="my-red">Lorem ipsum sdfsd</p>
+      <h1>Расположение устройств</h1>
+      <p id="alert" class="my-red"></p>
       <br>
       <canvas id="canvas" width="300" height="300"></canvas>
     </div>
