готово: предупреждение срабатывает пр и уровне сигнала менее уст. уровня

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Расположение устройств</h1>
+      <h1>Список устройств</h1>
       <p id="alert" class="my-red"></p>
       <br>
-      <canvas id="canvas" width="300" height="300"></canvas>
+      <div id="devices" class="list-group"></div>
     </div>
     
 
