--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,9 @@
       <h1>Расположение устройств</h1>
       <p id="alert" class="my-red"></p>
       <br>
-      <canvas id="canvas" width="300" height="300"></canvas>
+      <div id="devices1"></div>
+      <br>
+      <div id="devices2"></div>
     </div>
     
 
