--- a/.backups/frontend/index.html
+++ b/.backups/frontend/index.html
@@ -16,9 +16,9 @@
       <h1>Расположение устройств</h1>
       <p id="alert" class="my-red"></p>
       <br>
-      <div id="devices1"></div>
+      <canvas id="canvas"></canvas>
       <br>
-      <div id="devices2"></div>
+      <div id="devices"></div>
     </div>
     
 
