--- a/.backups/frontend/index.html
+++ b/.backups/frontend/index.html
@@ -16,7 +16,7 @@
       <h1>Расположение устройств</h1>
       <p id="alert" class="my-red"></p>
       <br>
-      <canvas id="canvas"></canvas>
+      <canvas id="canvas" width="300" height="300"></canvas>
       <br>
       <div id="devices"></div>
     </div>
