add logoand update styles

--- a/.backups/frontend/index.html
+++ b/.backups/frontend/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <div class="container">
+      <header>
+        <img src="assets/logo_default.svg" class="logo img-responsive" alt="Concord - Инновационные концепции бизнеса">
+      </header>
+      <hr>
       <h1>Расположение устройств</h1>
       <p id="alert" class="my-red"></p>
       <br>
