add styles on docker-part

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,11 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="width: 70%;">
+      <header>
+        <img src="assets/logo_default.svg" class="logo img-responsive" alt="Concord - Инновационные концепции бизнеса">
+      </header>
+      <hr style="background-color: red;">
       <h1>Расположение устройств</h1>
       <p id="alert" class="my-red"></p>
       <br>
