--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,25 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 
-    <title>Hello, world!</title>
+    <title>Расположение устройств</title>
   </head>
   <body>
-    <div class="container" style="width: 70%;">
+    <div class="container">
       <header>
         <img src="assets/logo_default.svg" class="logo img-responsive" alt="Concord - Инновационные концепции бизнеса">
       </header>
-      <hr style="background-color: red;">
+      <hr>
       <h1>Расположение устройств</h1>
-      <p id="alert" class="my-red"></p>
+      <div class="row">
+        <div class="col-sm-12">
+          <canvas id="draw" width="820" height="580"></canvas>
+        </div>
+      </div>
       <br>
-      <div id="devices1"></div>
       <br>
-      <div id="devices2"></div>
     </div>
-    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
